--- a/views/src/index.ejs
+++ b/views/src/index.ejs
@@ -54,15 +54,22 @@
                 something delicious for you</h1>
         </div>
 
-        <div class="p-10 left-[30%] h-[20px] relative flex w-[40%] rounded-md "
+        <div class="p-10 left-[30%] h-[5px] relative flex w-[40%] rounded-md mt-[20px]"
             style="box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);">
+
+            <svg class="absolute w-[20px] top-[36%] left-[3%]" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6"
+                fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                <path stroke-linecap="round" stroke-linejoin="round"
+                    d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z" />
+                <path stroke-linecap="round" stroke-linejoin="round" d="M15 11a3 3 0 11-6 0 3 3 0 016 0z" />
+            </svg>
 
             <div class="absolute top-[25%] ">
 
 
                 <div class="dropdown inline-block relative">
-                    <button
-                        class="bg-white  border-r-zinc-400  text-gray-700 font-semibold py-2 px-4 rounded-l inline-flex items-center">
+                    <button class="bg-white text-gray-700 font-semibold py-2 px-4 rounded-l inline-flex items-center"
+                        style="border-right:1px solid grey;">
                         <span class="mr-1">Nagercoil</span>
                         <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
                             <path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z" />
@@ -81,15 +88,100 @@
                 </div>
 
             </div>
-            <div class="absolute left-[181px] top-[25%] ">
+            <div class="absolute left-[195px] top-[25%] ">
                 <input class="rounded-r  border-l-zinc-500 w-[200%] h-[43px] "
                     placeholder="Search for restaurant,cusine or a dish" type="text">
+
+
             </div>
+
+            <svg class="absolute w-[20px] top-[40%] right-[10%]" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6"
+                fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
+            </svg>
+
+        </div>
+
+        <div class="text-center mt-[30px] w-[35%] absolute right-[25%] left-[32.4%] font-semibold			 text-sm tracking-wider"
+            style="font-family: 'Poppins', sans-serif;">
+            <h4>simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+                been the industry's standard dummy text ever since the 1500s,
+                when an unknown printer took</h4>
+        </div>
+    </div>
+
+
+
+    <!-- Hero -->
+
+    <!-- Cuisines -->
+
+    <div>
+        <h1 class=" text-center font-bold text-[30px] mt-[8%]" style="font-family: 'Poppins', sans-serif;">Cuisines
+            around here</h1>
+
+        <div class="block mt-[25px] md:flex">
+
+
+            <div class="relative m-[30px] mb-[50px] w-[200px] h-[200px] left-[50px] bg-[#fdedc9] hover:bg-[#FFD358] cursor-pointer"
+                style="
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        border-radius: 8px;">
+
+                <div class="bg-white w-[100px] h-[100px] absolute rounded-full left-[50px] top-[20px]">
+
+                </div>
+                <h4 class="absolute bottom-[20%] left-[40%] font-semibold	 text-[20px]">IDLY</h4>
+            </div>
+
+            <div class="relative m-[30px] mb-[50px] w-[200px] h-[200px] left-[50px] bg-[#fdedc9] hover:bg-[#FFD358] cursor-pointer"
+                style="
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        border-radius: 8px;">
+
+                <div class="bg-white w-[100px] h-[100px] absolute rounded-full left-[50px] top-[20px]">
+
+                </div>
+                <h4 class="absolute bottom-[20%] left-[40%] font-semibold	 text-[20px]">IDLY</h4>
+            </div>
+
+            <div class="relative m-[30px] mb-[50px] w-[200px] h-[200px] left-[50px] bg-[#fdedc9] hover:bg-[#FFD358] cursor-pointer"
+                style="
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        border-radius: 8px;">
+
+                <div class="bg-white w-[100px] h-[100px] absolute rounded-full left-[50px] top-[20px]">
+
+                </div>
+                <h4 class="absolute bottom-[20%] left-[40%] font-semibold	 text-[20px]">IDLY</h4>
+            </div>
+
+            <div class="relative m-[30px] mb-[50px] w-[200px] h-[200px] left-[50px] bg-[#fdedc9] hover:bg-[#FFD358] cursor-pointer" style="
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        border-radius: 8px;">
+
+            <div class="bg-white w-[100px] h-[100px] absolute rounded-full left-[50px] top-[20px]">
+                
+            </div>
+            <h4 class="absolute bottom-[20%] left-[40%] font-semibold	 text-[20px]">IDLY</h4>
+        </div>
+
+        <div class="relative m-[30px] mb-[50px] w-[200px] h-[200px] left-[50px] bg-[#fdedc9] hover:bg-[#FFD358] cursor-pointer" style="
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        border-radius: 8px;">
+
+            <div class="bg-white w-[100px] h-[100px] absolute rounded-full left-[50px] top-[20px]">
+                
+            </div>
+            <h4 class="absolute bottom-[20%] left-[40%] font-semibold	 text-[20px]">IDLY</h4>
+        </div>
+
+        
 
         </div>
     </div>
 
-    <!-- Hero -->
+    <!-- Cuisines -->
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
         integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
