--- a/views/src/index.ejs
+++ b/views/src/index.ejs
@@ -18,30 +18,9 @@
 <body>
 
     <!-- Header -->
-    <div class="flex justify-between  w-[100%] h-[60px] p-[30px] items-center overflow-hidden shadow-sm z-50">
-        <div class="flex">
-            <img src="../../public/assets/logo.png" alt="Logo">
-            <h1 class="font-semibold text-xl">Alo Foodie</h1>
-        </div>
+    <div>
 
-        <div>
-
-            <div class="flex items-center">
-
-                <div class="flex p-[50px] items-center">
-
-                    <h1 class="mr-[80px]">Home</h1>
-                    <h1 class="mr-[80px]">About</h1>
-                    <h1 class="mr-[80px]">Restaurants</h1>
-                    <h1 class="mr-[80px]">Service</h1>
-                    <h1 class="mr-[40px]">Contact</h1>
-                </div>
-
-
-                <button class="bg-white w-[100px] h-[40px] rounded-md "
-                    style="box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);">Login</button>
-            </div>
-        </div>
+        <%- include("../partials/nav") %>
     </div>
     <!-- Header -->
 
@@ -156,27 +135,29 @@
                 <h4 class="absolute bottom-[20%] left-[40%] font-semibold	 text-[20px]">IDLY</h4>
             </div>
 
-            <div class="relative m-[30px] mb-[50px] w-[200px] h-[200px] left-[50px] bg-[#fdedc9] hover:bg-[#FFD358] cursor-pointer" style="
+            <div class="relative m-[30px] mb-[50px] w-[200px] h-[200px] left-[50px] bg-[#fdedc9] hover:bg-[#FFD358] cursor-pointer"
+                style="
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
         border-radius: 8px;">
 
-            <div class="bg-white w-[100px] h-[100px] absolute rounded-full left-[50px] top-[20px]">
-                
-            </div>
-            <h4 class="absolute bottom-[20%] left-[40%] font-semibold	 text-[20px]">IDLY</h4>
-        </div>
+                <div class="bg-white w-[100px] h-[100px] absolute rounded-full left-[50px] top-[20px]">
 
-        <div class="relative m-[30px] mb-[50px] w-[200px] h-[200px] left-[50px] bg-[#fdedc9] hover:bg-[#FFD358] cursor-pointer" style="
+                </div>
+                <h4 class="absolute bottom-[20%] left-[40%] font-semibold	 text-[20px]">IDLY</h4>
+            </div>
+
+            <div class="relative m-[30px] mb-[50px] w-[200px] h-[200px] left-[50px] bg-[#fdedc9] hover:bg-[#FFD358] cursor-pointer"
+                style="
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
         border-radius: 8px;">
 
-            <div class="bg-white w-[100px] h-[100px] absolute rounded-full left-[50px] top-[20px]">
-                
-            </div>
-            <h4 class="absolute bottom-[20%] left-[40%] font-semibold	 text-[20px]">IDLY</h4>
-        </div>
+                <div class="bg-white w-[100px] h-[100px] absolute rounded-full left-[50px] top-[20px]">
 
-        
+                </div>
+                <h4 class="absolute bottom-[20%] left-[40%] font-semibold	 text-[20px]">IDLY</h4>
+            </div>
+
+
 
         </div>
     </div>
